[gd_scene load_steps=4 format=3 uid="uid://dkc4d0hilfokv"]

[ext_resource type="Script" path="res://lyrics_viewer/karaoke_wipe_viewer/view/test.gd" id="1_11bty"]
[ext_resource type="PackedScene" uid="uid://c4b7l0w54wx1s" path="res://lyrics_viewer/karaoke_wipe_viewer/view/wipe_line.tscn" id="2_xu0sc"]
[ext_resource type="PackedScene" uid="uid://dng8452xhjwev" path="res://lyrics_viewer/karaoke_wipe_viewer/view/karaoke_wipe_view.tscn" id="3_oilqg"]

[node name="test" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_11bty")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WipeLine" parent="." instance=ExtResource("2_xu0sc")]
visible = false
offset_top = 31.0
offset_right = 598.0
offset_bottom = 316.0

[node name="karaoke_wipe_view" parent="." instance=ExtResource("3_oilqg")]
layout_mode = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 204.0
offset_top = 391.0
offset_right = 408.0
offset_bottom = 477.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
