extends Control


const LYRICS := """@offset=-300

DMM GAMES "Gemini Seed" 主題歌
Crystaliah『時空の終焉 ~ toki no owari ~ [full ver.]』

vocal : y u r a
song : Crystaliah

https://crystaliah.jp

画像 ©︎DMM GAMES
---------------------------------------------------------
[00:00.00]
[00:03.33]ま[00:03.73]ば[00:03.91]ゆ[00:04.03]い｜[00:04.35]楽園《[00:04.35]ら[00:04.64]く[00:05.00]え[00:05.17]ん》[00:05.36]を[00:05.78]こ[00:05.91]の｜[00:06.09]世界《[00:06.09]せ[00:06.28]か[00:06.61]い》[00:06.85]に[00:07.78]　｜[00:08.28]取《[00:08.28]と》[00:08.40]り｜[00:08.47]戻《[00:08.47]も[00:08.61]ど》[00:08.80]す[00:09.01]ま[00:09.35]で[00:12.31]　
[00:17.04]
[00:21.66]
[00:22.56]｜[00:22.56]暗闇《[00:22.56]く[00:22.68]ら[00:22.80]や[00:22.96]み》[00:23.12]に｜[00:23.30]宿《[00:23.30]や[00:23.63]ど》[00:23.95]る｜[00:24.32]閃光[00:25.21]《[00:24.32]せ[00:24.49]ん[00:24.66]こ[00:24.83]う[00:25.21]》
[00:25.41]ほ[00:25.60]と[00:25.76]ば[00:25.96]し[00:26.15]る｜[00:26.41]美《[00:26.41]う[00:26.55]つ[00:26.85]く》[00:27.22]し[00:27.33]い｜[00:27.55]世界《[00:27.55]せ[00:27.89]か[00:28.09]い》[00:28.28]よ[00:29.17]　[00:30.76]こ[00:30.92]こ[00:31.14]に[00:31.99]
[00:32.76]
[00:33.96]｜[00:33.96]鈍《[00:33.96]に[00:34.13]ぶ》[00:34.33]く｜[00:34.54]光《[00:34.54]ひ[00:34.73]か》[00:34.98]る｜[00:35.08]邪悪《[00:35.08]じゃ[00:35.23]あ[00:35.39]く》[00:35.73]の｜[00:36.09]目《[00:36.09]め》[00:36.64]　
[00:36.82]｜[00:36.82]迷《[00:36.82]ま[00:36.98]よ》[00:37.15]え[00:37.36]る｜[00:37.57]女神《[00:37.57]め[00:37.89]が[00:38.22]み》[00:38.43]　｜[00:38.65]突《[00:38.65]つ》[00:38.95]き｜[00:39.30]刺《[00:39.30]さ》[00:39.51]さ[00:39.67]る[00:40.50]　｜[00:41.81]哀《[00:41.81]か[00:41.97]な》[00:42.18]し[00:42.34]い｜[00:42.54]刃《[00:42.54]や[00:42.72]い[00:43.22]ば》[00:44.14]　
[00:45.54]
[00:46.11]｜[00:46.11]星《[00:46.11]ほ[00:46.28]し》[00:46.46]の｜[00:46.64]瞬《[00:46.64]ま[00:46.84]た[00:47.22]た》[00:47.47]き[00:47.74]　[00:47.91]こ[00:48.06]の｜[00:48.23]一瞬《[00:48.23]い[00:48.44]っ[00:48.63]しゅ[00:48.81]ん》[00:48.98]さ[00:49.17]え｜[00:49.33]惜《[00:49.33]お》[00:49.50]し[00:49.67]い[00:50.23]
[00:51.77]ど[00:51.99]ん[00:52.19]な[00:52.38]に｜[00:52.54]蔑《[00:52.54]さ[00:52.89]げ[00:53.06]す》[00:53.20]ま[00:53.63]れ[00:53.80]て[00:54.04]も[00:54.54]　[00:54.74]か[00:54.88]ま[00:55.06]わ[00:55.24]な[00:55.41]い[00:56.01]
[00:56.66]｜[00:56.66]永遠《[00:56.66]え[00:56.81]い[00:57.04]え[00:57.38]ん》[00:57.58]の[00:57.91]　｜[00:58.09]夢《[00:58.09]ゆ[00:58.43]め》[00:58.79]か[00:58.97]ら｜[00:59.31]醒《[00:59.31]さ》[00:59.48]め[00:59.67]て[00:59.87]　[01:00.26]あ[01:00.41]な[01:00.58]た[01:00.75]に[01:00.94]つ[01:01.11]い[01:01.45]て[01:01.62]ゆ[01:01.79]く[01:02.50]
[01:03.21]
[01:03.60]こ[01:03.80]の｜[01:03.99]広《[01:03.99]ひ[01:04.18]ろ》[01:04.37]す[01:04.71]ぎ[01:05.04]る｜[01:05.35]世界《[01:05.35]せ[01:05.74]か[01:06.07]い》[01:06.47]で[01:06.65]い[01:06.84]ま[01:07.28]　｜[01:07.55]虹《[01:07.55]に[01:07.72]じ》[01:07.89]の[01:08.07]よ[01:08.24]う[01:08.54]に｜[01:08.69]強《[01:08.69]つ[01:08.84]よ》[01:09.00]く｜[01:09.35]光《[01:09.35]ひ[01:09.52]か》[01:09.69]る[01:09.95]
[01:10.25]｜[01:10.25]舞《[01:10.25]ま》[01:10.41]い｜[01:10.66]降《[01:10.66]お》[01:10.79]り[01:10.87]た[01:11.02]　[01:11.15]か[01:11.51]す[01:11.70]か[01:11.85]な｜[01:12.22]希望[01:14.23]《[01:12.22]き[01:12.41]ぼ[01:12.58]う[01:14.23]》
[01:15.05]｜[01:15.05]振《[01:15.05]ふ》[01:15.23]り｜[01:15.43]返《[01:15.43]か[01:15.61]え》[01:15.85]ら[01:16.10]ず｜[01:16.50]大《[01:16.50]おお》[01:16.83]き[01:17.20]な｜[01:17.55]幻《[01:17.55]ま[01:17.77]ぼ[01:17.91]ろ[01:18.09]し》[01:18.29]に[01:18.68]　｜[01:19.06]大地《[01:19.06]だ[01:19.19]い[01:19.37]ち》[01:19.53]を｜[01:19.70]蹴《[01:19.70]け》[01:19.86]っ[01:20.07]て｜[01:20.20]挑《[01:20.20]い[01:20.36]ど》[01:20.64]む[01:20.88]
[01:21.20]あ[01:21.33]な[01:21.82]た[01:22.00]に[01:22.72]　[01:23.98]す[01:24.21]べ[01:24.37]て[01:24.54]を｜[01:24.74]賭《[01:24.74]か》[01:25.05]け[01:25.40]た[01:25.76]い[01:25.94]の[01:26.60]
[01:27.04]ま[01:27.36]ば[01:27.58]ゆ[01:27.72]い｜[01:27.90]楽園《[01:27.90]ら[01:28.25]く[01:28.60]え[01:28.78]ん》[01:28.97]を[01:29.33]こ[01:29.52]の｜[01:29.69]世界《[01:29.69]せ[01:29.88]か[01:30.10]い》[01:30.42]に[01:31.90]　｜[01:31.77]取《[01:31.77]と》[01:31.90]り｜[01:32.07]戻《[01:32.07]も[01:32.22]ど》[01:32.37]す[01:32.56]ま[01:32.93]で[01:34.99]　
[01:35.58]
[01:43.03]
[01:44.03]｜[01:44.03]近《[01:44.03]ち[01:44.12]か》[01:44.22]づ[01:44.38]く｜[01:44.55]時空の終焉[01:46.64]《[01:44.55]と[01:44.73]き[01:45.04]の[01:45.38]お[01:45.77]わ[01:46.10]り[01:46.64]》
[01:46.83]｜[01:46.83]過《[01:46.83]す》[01:47.01]ぎ｜[01:47.19]去《[01:47.19]さ》[01:47.36]り[01:47.55]し｜[01:47.93]過《[01:47.93]あ[01:48.12]や[01:48.26]ま》[01:48.56]ち｜[01:48.92]悔《[01:48.92]く》[01:49.30]い[01:49.73]て[01:50.57]　｜[01:52.19]祈《[01:52.19]い[01:52.36]の》[01:52.56]る[01:53.47]
[01:54.93]
[01:55.42]す[01:55.53]べ[01:55.76]て[01:55.94]の｜[01:56.14]罪《[01:56.14]つ[01:56.31]み》｜[01:56.49]洗《[01:56.49]あ[01:56.69]ら》[01:57.18]わ[01:57.56]れ[01:58.03]　｜[01:58.25]別《[01:58.25]わ[01:58.43]か》[01:58.59]れ[01:58.79]に｜[01:58.99]向《[01:58.99]む》[01:59.33]か[01:59.57]う[01:59.63]
[01:59.70]tearfully [02:00.40]winding [02:01.13]road[02:01.99] [02:03.26]あ[02:03.43]な[02:03.60]た[02:03.78]と[02:03.97]と[02:04.17]も[02:04.68]に[02:05.58]
[02:06.96]
[02:07.55]キ[02:07.72]ミ[02:07.90]た[02:08.08]ち[02:08.27]を｜[02:08.62]救《[02:08.62]す[02:08.96]く》[02:09.32]え[02:09.49]る[02:09.66]の[02:09.90]な[02:10.03]ら[02:10.09]　[02:10.24]そ[02:10.41]れ[02:10.58]が[02:10.78]ボ[02:10.92]ク[02:11.17]の[02:11.96]
[02:13.21]｜[02:13.21]使命《[02:13.21]し[02:13.38]め[02:13.59]い》[02:13.78]だ[02:14.02]と｜[02:14.34]語《[02:14.34]か[02:14.49]た》[02:14.66]る｜[02:15.02]横顔《[02:15.02]よ[02:15.20]こ[02:15.36]が[02:15.57]お》[02:15.93]　｜[02:16.16]優《[02:16.16]ゆ[02:16.30]う》｜[02:16.47]凛《[02:16.47]り[02:16.63]ん》[02:16.81]で[02:17.55]　
[02:18.02]こ[02:18.39]の｜[02:19.01]危機《[02:19.01]き[02:19.44]き》[02:19.81]に[02:20.21]こ[02:20.38]そ[02:20.77]キ[02:20.93]ラ[02:21.09]リ[02:21.29] ｜[02:21.65]輝《[02:21.65]か[02:21.82]が[02:22.01]や》[02:22.19]く[02:22.37]こ[02:22.55]の｜[02:22.87]命[02:23.99]《[02:22.87]い[02:23.06]の[02:23.24]ち[02:23.99]》
[02:24.64]
[02:25.03]し[02:25.21]な[02:25.37]や[02:25.59]か[02:25.77]に[02:26.10]よ[02:26.48]み[02:26.84]が[02:27.00]え[02:27.18]れ｜[02:27.53]今《[02:27.53]い[02:27.88]ま》[02:28.07]こ[02:28.25]そ[02:28.72]　[02:28.97]あ[02:29.13]の｜[02:29.30]空《[02:29.30]そ[02:29.47]ら》[02:29.64]の[02:29.88]よう[02:30.19]に｜[02:30.39]気高《[02:30.39]け[02:30.78]だ[02:30.93]か》[02:31.19]く[02:31.52]
[02:31.69]｜[02:31.69]降《[02:31.69]ふ》[02:31.83]り｜[02:32.00]注《[02:32.00]そ[02:32.17]そ》[02:32.32]ぐ[02:32.48]　｜[02:32.59]大《[02:32.59]おお》[02:33.06]き[02:33.23]な｜[02:33.61]希望[02:35.56]《[02:33.61]き[02:33.79]ぼ[02:34.16]う[02:35.56]》
[02:36.46]｜[02:36.46]一歩《[02:36.46]いっ[02:36.75]ぽ》[02:36.97]ず[02:37.18]つ[02:37.51]た[02:37.83]し[02:38.23]か[02:38.56]に｜[02:38.92]踏《[02:38.92]ふ》[02:39.11]み[02:39.29]し[02:39.47]め[02:39.63]て[02:39.77]　｜[02:40.04]幻惑《[02:40.04]げ[02:40.21]ん[02:40.39]わ[02:40.56]く》[02:40.77]の｜[02:40.94]風《[02:40.94]か[02:41.07]ぜ》[02:41.26]に｜[02:41.50]立《[02:41.50]た》[02:41.62]ち｜[02:41.83]向《[02:41.83]む》[02:42.19]か[02:42.35]う[02:42.52]
[02:42.58]あ[02:42.73]な[02:43.22]た[02:43.43]に[02:44.56]　[02:45.38]す[02:45.58]べ[02:45.75]て[02:45.93]を｜[02:46.11]預《[02:46.11]あ[02:46.43]ず》[02:46.79]け[02:47.14]た[02:47.31]の[02:48.01]
[02:48.49]｜[02:48.49]解《[02:48.49]と》[02:48.75]か[02:48.95]れ[02:49.30]た｜[02:49.53]街《[02:49.53]ま[02:49.67]ち》[02:50.04]の｜[02:50.26]色《[02:50.26]い[02:50.39]ろ》[02:50.74]こ[02:50.92]の｜[02:51.08]世界《[02:51.08]せ[02:51.28]か[02:51.56]い》[02:51.83]に[02:52.64]　｜[02:53.28]取《[02:53.28]と》[02:53.37]り｜[02:53.51]戻《[02:53.51]も[02:53.66]ど》[02:53.77]す[02:53.95]ま[02:54.33]で[02:55.54]
[02:57.03]
[03:15.42]
[03:16.46]こ[03:16.65]の｜[03:16.82]広《[03:16.82]ひ[03:17.01]ろ》[03:17.20]す[03:17.49]ぎ[03:17.84]る｜[03:18.24]世界《[03:18.24]せ[03:18.61]か[03:18.94]い》[03:19.30]で[03:19.52]い[03:19.69]ま[03:19.89]　｜[03:20.43]虹《[03:20.43]に[03:20.58]じ》[03:20.77]の[03:20.91]よう[03:21.25]に｜[03:21.45]強《[03:21.45]つ[03:21.66]よ》[03:21.81]く｜[03:22.20]光《[03:22.20]ひ[03:22.36]か》[03:22.50]り[03:22.65]
[03:23.09]｜[03:23.09]刻《[03:23.09]き[03:23.26]ざ》[03:23.44]ま[03:23.62]れ[03:23.78]る[03:23.88]　｜[03:23.99]遥《[03:23.99]は[03:24.35]る》[03:24.51]か[03:24.65]な｜[03:25.04]伝説[03:26.85]《[03:25.04]で[03:25.22]ん[03:25.39]せ[03:26.58]つ[03:26.85]》
[03:27.86]｜[03:27.86]振《[03:27.86]ふ》[03:28.04]り｜[03:28.22]返《[03:28.22]か[03:28.44]え》[03:28.64]ら[03:28.92]ず｜[03:29.34]大《[03:29.34]おお》[03:29.71]き[03:30.04]な｜[03:30.37]幻《[03:30.37]ま[03:30.55]ぼ[03:30.70]ろ[03:30.90]し》[03:31.10]に[03:31.29]　｜[03:31.84]大地《[03:31.84]だ[03:32.00]い[03:32.17]ち》[03:32.35]を｜[03:32.53]蹴《[03:32.53]け》[03:32.85]っ[03:33.03]て｜[03:33.25]挑《[03:33.25]い[03:33.32]ど》[03:33.63]む[03:33.79]　
[03:34.02]あ[03:34.15]な[03:34.67]た[03:34.86]に[03:36.07]　[03:36.82]す[03:36.98]べ[03:37.15]て[03:37.35]を｜[03:37.55]賭《[03:37.55]か》[03:37.89]け[03:38.26]た[03:38.58]い[03:38.75]の[03:39.47]
[03:39.85]ま[03:40.20]ば[03:40.37]ゆ[03:40.55]い｜[03:40.74]楽園《[03:40.74]ら[03:41.06]く[03:41.43]え[03:41.61]ん》[03:41.80]を[03:42.17]こ[03:42.36]の｜[03:42.54]世界《[03:42.54]せ[03:42.73]か[03:42.93]い》[03:43.25]に[03:44.00]　｜[03:44.64]取《[03:44.64]と》[03:44.76]り｜[03:44.89]戻《[03:44.89]も[03:45.03]ど》[03:45.19]す[03:45.41]ま[03:45.77]で[03:47.72]
[03:48.55]
---------------------------------------------------------

@ruby_parent=｜
@ruby_begin=《
@ruby_end=》
"""


# Called when the node enters the scene tree for the first time.
func _ready():
	DisplayServer.window_set_flag(DisplayServer.WINDOW_FLAG_BORDERLESS,false)
	
#	$WipeLine.font = load("res://fonts/ShipporiAntique-Medium.otf")
	var test = \
"""[00:33.96]｜[00:33.96]鈍《[00:33.96]に[00:34.13]ぶ》[00:34.33]く｜[00:34.54]光《[00:34.54]ひ[00:34.73]か》[00:34.98]る｜[00:35.08]邪悪《[00:35.08]じゃ[00:35.23]あ[00:35.39]く》[00:35.73]の｜[00:36.09]目《[00:36.09]め》[00:36.64]　
[00:36.82]｜[00:36.82]迷《[00:36.82]ま[00:36.98]よ》[00:37.15]え[00:37.36]る｜[00:37.57]女神《[00:37.57]め[00:37.89]が[00:38.22]み》[00:38.43]　｜[00:38.65]突《[00:38.65]つ》[00:38.95]き｜[00:39.30]刺《[00:39.30]さ》[00:39.51]さ[00:39.67]る[00:40.50]　｜[00:41.81]哀《[00:41.81]か[00:41.97]な》[00:42.18]し[00:42.34]い｜[00:42.54]刃《[00:42.54]や[00:42.72]い[00:43.22]ば》[00:44.14]　
@ruby_parent=｜
@ruby_begin=《
@ruby_end=》
"""
	var lyrics := LyricsContainer.new(LYRICS)

	
	var param := WipeViewerLine.Parameter.new()
	param.font = load("res://fonts/ShipporiAntique-Medium.otf")
	param.font_size = 40
	param.font_ruby_size = 20
	param.font_outline_size = 4
	param.font_ruby_outline_size = 2
	param.horizontal_alignment = 0
	param.left_padding = 16
	param.right_padding = 16
	param.ruby_distance = -12
	$karaoke_wipe_view.parameter = param
	$karaoke_wipe_view.set_lyrics(lyrics)
	$karaoke_wipe_view.set_time(0)
	
	var test_lyrics := LyricsContainer.new(test)
	$WipeLine.parameter = param
	$WipeLine.set_lyrics(test_lyrics.lines[0],-1)
	$WipeLine.set_time(0)
	pass # Replace with function body.

var time_ : float = 0
var pause : bool = true

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	if not pause:
		time_ += delta
		$karaoke_wipe_view.set_time(time_)


func _on_button_pressed():
	pause = not pause
	if not pause:
		time_ = 0
		$karaoke_wipe_view.set_time(time_)

